<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".view.EditPackageFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/box"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.486"
        app:srcCompat="@drawable/box"
        tools:srcCompat="@drawable/box" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/Description"
        android:textColor="#0B0909"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/etDescriptionE"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etDescriptionE"
        android:layout_width="207dp"
        android:layout_height="127dp"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/etPrizeE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:text="description" />

    <EditText
        android:id="@+id/etPrizeE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btDP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescriptionE"
        tools:text="precio" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/Prize"
        android:textColor="#090808"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/etPrizeE"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btDP"
        android:layout_width="88dp"
        android:layout_height="51dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btEP"
        app:layout_constraintTop_toBottomOf="@+id/etPrizeE" />

    <Button
        android:id="@+id/btEP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        app:layout_constraintBaseline_toBaselineOf="@+id/btDP"
        app:layout_constraintEnd_toStartOf="@+id/btDP"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/editP"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="237dp" />
</androidx.constraintlayout.widget.ConstraintLayout>